Added DeleteCaptures endpoint, unit test and swag docs
