# docs/swagger.json
@@ -46,8 +46,8 @@
             }
         },
         "/captures": {
-            "get": {
-                "description": "Gets a list of captures from a User with input data from DDB",
+            "delete": {
+                "description": "Deletes a User's captures with input data from DDB",
                 "consumes": [
                     "application/json"
                 ],
@@ -57,7 +57,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Gets a list of captures from a User",
+                "summary": "Deletes captures",
                 "parameters": [
                     {
                         "description": "Userid",
@@ -65,16 +65,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/routes.GetCapturesList.GetCapturesStruct"
+                            "$ref": "#/definitions/routes.DeleteCaptures.DeleteInputStruct"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "string username",
-                        "schema": {
-                            "$ref": "#/definitions/routes.GetUser.GetOutputStruct"
-                        }
+                    "200": {
+                        "description": "OK"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -491,6 +488,14 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "routes.DeleteCaptures.DeleteInputStruct": {
+            "type": "object",
+            "properties": {
+                "userid": {
+                    "type": "string"
                 }
             }
         },
